Change button default colour to white.

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -10,7 +10,7 @@
     /* === Cover / Landing area === */
     --cover-text-color: #627797;
     /* Used for Landing screen menu buttons, but potentially usable for highlighting other things */
-    --highlight: #8ACBFF;
+    --highlight: #FFFFFF;
     --highlight-contrast: var(--cover-text-color);
     /*iverse colors used for :hover */
     --highlight-inverse: var(--cover-text-color);
